# grouprss

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/2020-10-24-221950_create_users/: up.sql
migrations/2020-10-25-000149_uuid_extension/: down.sql
migrations/2020-10-25-000849_create_users/: up.sql
migrations/2020-10-25-001144_create_groups/: up.sql
migrations/2020-10-25-001917_create_feeds/: down.sql  up.sql
migrations/2020-10-25-002055_create_sources/: up.sql
migrations/2020-10-25-013710_create_feeds_sources/: down.sql  up.sql
migrations/2020-10-25-014308_create_users_groups/: down.sql  up.sql
src/: main.rs
src/models/: feed.rs  group.rs  source.rs  user.rs
