[package]
name = "grouprss"
version = "0.1.0"
authors = ["Henry Jackson <henry.jackson.95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
serde = "1.0.117"
futures = "0.3.7"
serde_json = "1.0.59"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["postgres"] }

net.git-fetch-with-cli = true
